--- a/MyTest578/MyTest578.csproj
+++ b/MyTest578/MyTest578.csproj
@@ -92,7 +92,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Ranorex.Plugin.Win32">
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Ranorex.Plugin.WinForms">
       <Private>False</Private>
